--- a/app/scripts/modules/kubernetes/src/serverGroup/configure/wizard/volumes.html
+++ b/app/scripts/modules/kubernetes/src/serverGroup/configure/wizard/volumes.html
@@ -143,6 +143,32 @@
         <input type="number" class="form-control input-sm" name="partition" ng-model="source.awsElasticBlockStore.partition"/>
       </div>
     </div>
+    <div class="form-group" ng-if="source.type === 'NFS'">
+      <div class="col-md-3 sm-label-right">
+        Server
+        <help-field key="kubernetes.pod.volume.nfs.server"></help-field>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control input-sm" name="server" ng-model="source.nfs.server"/>
+      </div>
+    </div>
+    <div class="form-group" ng-if="source.type === 'NFS'">
+      <div class="col-md-3 sm-label-right">
+        Path
+        <help-field key="kubernetes.pod.volume.nfs.path"></help-field>
+      </div>
+      <div class="col-md-4">
+        <input type="text" class="form-control input-sm" ng-pattern="volumesController.pathPattern" name="path" ng-model="source.nfs.path"/>
+      </div>
+    </div>
+    <div class="form-group" ng-if="source.type === 'NFS'">
+      <div class="col-md-3 sm-label-right">
+        Read Only
+      </div>
+      <div class="col-md-2">
+        <input type="checkbox" name="readOnly" ng-model="source.nfs.readOnly"/>
+      </div>
+    </div>
     <hr ng-if="command.volumeSources.length > 1">
   </div>
   <div>
