fix(core/pipeline): Make script stage "Path" field not required (#5428)

--- a/app/scripts/modules/core/src/pipeline/config/stages/script/scriptStage.html
+++ b/app/scripts/modules/core/src/pipeline/config/stages/script/scriptStage.html
@@ -13,8 +13,7 @@
            ng-model="stage.repoBranch"/>
   </stage-config-field>
   <stage-config-field label="Script Path" help-key="pipeline.config.script.path">
-    <input type="text" class="form-control input-sm" required
-           ng-model="stage.scriptPath"/>
+    <input type="text" class="form-control input-sm" ng-model="stage.scriptPath"/>
   </stage-config-field>
   <stage-config-field label="Command" help-key="pipeline.config.script.command">
     <textarea class="form-control input-sm" required
