--- a/app/scripts/modules/core/src/securityGroup/securityGroup.html
+++ b/app/scripts/modules/core/src/securityGroup/securityGroup.html
@@ -23,8 +23,10 @@
       <div ng-repeat="serverGroup in securityGroup.usages.serverGroups | orderBy:'-name'"
            class="rollup-row" ng-class="{disabled: serverGroup.isDisabled}">
         <a
-            ui-sref=".serverGroup({region: serverGroup.region, accountId: securityGroup.account, serverGroup: serverGroup.name, provider: securityGroup.provider})"
-            ui-sref-active="active">
+            ui-sref=".serverGroup({region: serverGroup.region, accountId: serverGroup.account, serverGroup: serverGroup.name, provider: serverGroup.cloudProvider})"
+            ui-sref-active="active"
+            ng-click="$event.stopPropagation()"
+        >
           <span class="icon icon-server-group icon-{{securityGroup.provider}} small"></span> {{serverGroup.name}}
         </a>
       </div>
@@ -37,7 +39,9 @@
            class="rollup-row">
         <a
             ui-sref=".loadBalancerDetails({region: securityGroup.region, accountId: securityGroup.account, name: loadBalancer.name, vpcId: securityGroup.vpcId, provider: securityGroup.provider})"
-            ui-sref-active="active">
+            ui-sref-active="active"
+            ng-click="$event.stopPropagation()"
+        >
           <i class="fa icon-sitemap"/> {{loadBalancer.name}}
         </a>
       </div>
