--- a/src/kayenta/stages/kayentaStage/kayentaStage.html
+++ b/src/kayenta/stages/kayentaStage/kayentaStage.html
@@ -1,4 +1,14 @@
 <div class="form-horizontal canary-config-view">
+  <div class="alert alert-warning" ng-if="kayentaCanaryStageCtrl.state.lifetimeHoursUpdatedToDuration">
+    <p>
+      <strong>Kayenta now supports analysis lifetimes shorter than 1 hour.</strong>
+    </p>
+    <p>
+      This canary stage has been updated to reflect the new lifetime support.
+      Click "Save Changes" to save the updated lifetime on the server.
+    </p>
+  </div>
+
   <h4>Canary Config</h4>
 
   <stage-config-field label="Analysis Type"
@@ -89,7 +99,7 @@
             with a look-back duration of
             <input type="number"
                    min="1"
-                   max="{{kayentaCanaryStageCtrl.stage.canaryConfig.lifetimeHours * 60}}"
+                   max="{{kayentaCanaryStageCtrl.state.lifetime.hours * 60}}"
                    required
                    ng-model="kayentaCanaryStageCtrl.stage.canaryConfig.lookbackMins"
                    class="form-control input-sm" style="display: inline-block; margin: 0 5px; width: 15%"/>
@@ -180,13 +190,28 @@
 
     <stage-config-field label="Lifetime"
                         help-key="pipeline.config.canary.analysisType"
-                        field-columns="3"
-                        ng-if="kayentaCanaryStageCtrl.stage.analysisType === 'realTime'">
+                        field-columns="8"
+                        ng-if="kayentaCanaryStageCtrl.stage.analysisType === 'realTime'"
+                        ng-class="kayentaCanaryStageCtrl.getLifetimeClassnames()"
+                        style="padding-left: 0; padding-right: 0;">
       <input type="text"
-             ng-model="kayentaCanaryStageCtrl.stage.canaryConfig.lifetimeHours"
+             ng-model="kayentaCanaryStageCtrl.state.lifetime.hours"
+             ng-required="kayentaCanaryStageCtrl.isLifetimeRequired()"
              class="form-control input-sm"
-             style="display: inline-block; width: 33%"/>
-      <span class="form-control-static">hours</span>
+             style="display: inline-block; width: 11%"
+             ng-change="kayentaCanaryStageCtrl.onLifetimeChange()" />
+      <span class="form-control-static">
+        hours
+      </span>
+      <input type="text"
+             ng-model="kayentaCanaryStageCtrl.state.lifetime.minutes"
+             ng-required="kayentaCanaryStageCtrl.isLifetimeRequired()"
+             class="form-control input-sm"
+             style="display: inline-block; width: 11%; margin-left: 12px;"
+             ng-change="kayentaCanaryStageCtrl.onLifetimeChange()" />
+      <span class="form-control-static">
+        minutes
+      </span>
     </stage-config-field>
 
     <stage-config-field label="Resource Type" ng-if="kayentaCanaryStageCtrl.metricStore === 'prometheus'">
