--- a/app/scripts/modules/kubernetes/src/v2/loadBalancer/details/details.html
+++ b/app/scripts/modules/kubernetes/src/v2/loadBalancer/details/details.html
@@ -122,11 +122,11 @@
           </copy-to-clipboard>
         </dd>
       </dl>
-      <dl ng-if="ctrl.loadBalancer.menifest.spec.loadBalancerIP">
+      <dl ng-if="ctrl.loadBalancer.manifest.spec.loadBalancerIP">
         <dt>Load Balancer IP</dt>
         <dd>
           <a target="_blank" href="//{{ctrl.loadBalancer.manifest.spec.loadBalancerIP}}">
-            {{ctrl.loadBalancer.menifest.spec.loadBalancerIP}}
+            {{ctrl.loadBalancer.manifest.spec.loadBalancerIP}}
           </a>
           <copy-to-clipboard
             class="copy-to-clipboard copy-to-clipboard-sm"
