--- a/src/kayenta/stages/kayentaStage/kayentaStage.html
+++ b/src/kayenta/stages/kayentaStage/kayentaStage.html
@@ -226,7 +226,7 @@
       <select
         class="form-control input-sm"
         ng-model="kayentaCanaryStageCtrl.stage.canaryConfig.scopes[0].extendedScopeParams.resourceType"
-        ng-options="option for option in ['gce_instance', 'aws_ec2_instance', 'gae_app', 'k8s_container', 'k8s_pod', 'k8s_node', 'global']">
+        ng-options="option for option in ['gce_instance', 'aws_ec2_instance', 'gae_app', 'k8s_container', 'k8s_pod', 'k8s_node', 'gke_container', 'global']">
       </select>
     </stage-config-field>
 
