fix(kubernetes): console output broken for instances (#5516)

--- a/app/scripts/modules/kubernetes/src/v2/instance/details/details.html
+++ b/app/scripts/modules/kubernetes/src/v2/instance/details/details.html
@@ -77,7 +77,7 @@
 
     <collapsible-section heading="Logs" expanded="true">
       <div>
-        <console-output-link instance="ctrl.instance"></console-output-link>
+        <console-output-link instance="ctrl.consoleOutputInstance"></console-output-link>
       </div>
     </collapsible-section>
   </div>
